changed data education

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Back-end Webdeveloper Nanodegree  
-  uni: -
-  year: June, 2013 &mdash; January, 2017
+- degree: Front-end junior developer  
+  uni: 
+  year: April, 2020
   # awards:
   # summary:
