--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,6 +1,6 @@
 # Interests
 
-- description: Electron, Atom, GraphQL, Webhooks, and most of all... Git
-- description: Movies about a cappella singing 
-- description: Anaheim Theme Parks
+- description: Java Script, React, GraphQL, Webhooks, and most of all... Git
+- description: Drawing in Photoshop, Autodesk SketchBook 
+
 
